Ask for password when connecting to database

BUG: 398409
BUG: 394384
FIXED-IN: 5.0.2